# pythonwatermark

./: LICENSE  README.md  setup.cfg  setup.py
pythonwatermark/: watermarkutils.py
