[metadata]
name = pythonwatermark
version = 0.0.1
author = Bowes Publishing
description = Easily add watermarks to PDF, JPG & PNG files with no restrictive licensing
long_description = file: README.MD
url = https://github.com/bowespublishing/python-watermark
keywords = watermark, pdf watermark, python watermark
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = True
install_requires = pypdfium2; Pillow